--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,11 @@
-
+<% if @name %>
 <h1>My name is <%=@name%></h1>
+<% end %>
 <div style='border: dashed red;'>
 <img src='http://bit.ly/1eze8aE'></div>
+<% if !@name %>
+<form action="/named-cat">
+    <input type="text" name="name">
+    <input type="submit" value="Submit">
+</form>
+<% end %>
