--- a/views/form.erb
+++ b/views/form.erb
@@ -1,6 +1,7 @@
+
 <% if !@name %>
-<form action="/named-cat">
-<input type="text" name="name">
-<input type="submit" value="Submit">
+<form action="/named-cat" method="post">
+    <input type="text" name="name">
+    <input type="submit" value="Submit">
 </form>
 <% end %>
